# hmc5883l-rs

./: Cargo.toml  README.md
examples/: compass.rs  example.rs  magnetometer.rs
src/: lib.rs
